fix: bar overflow
fix: bar overflow problem

--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,7 @@ p{
 #bars-container{
   display: flex;
   flex-direction: row;
+  max-width: 100vw;
 }
 
 #bars-container-insertion{
